simplify context api